# vnmcpserver

./: .gitignore  README.md  pyproject.toml
skill-plugin/: SKILL.md
src/versa_mcp/: schemas.py  server.py
src/versa_mcp/mocks/: endpoint_map.py  id_registry.py  mock_client.py
src/versa_mcp/mocks/alarm/: filter_paginate_alarm.json  get_alarm_handling.json  get_alarm_summary.json  get_alarm_summary_per_org.json  get_alarm_types.json  get_all_filtered_alarms.json  get_analytics_alarm_summary.json  get_analytics_alarms.json  get_appliance_alarm_model.json  get_appliance_alarm_types.json  get_device_alarm_summary.json  get_director_alarm_summary.json  get_director_alarms.json  get_director_fail_over_alarms.json  get_director_ha_alarms.json  get_imp_alarm_summary.json  get_imp_alarms.json  get_status_change.json
src/versa_mcp/mocks/appliance/: export_appliance_configuration.json  get_all_appliance_names.json  get_all_appliance_status.json  get_all_appliances_basic_details.json  get_all_appliances_by_type_and_tags.json  get_all_appliances_lite.json  get_all_appliances_liteview.json  get_appliance_capabilities.json  get_appliance_details_by_uuid.json  get_appliance_hardware.json  get_appliance_locations.json  get_appliance_services.json  get_appliance_status.json  get_appliance_status_brief.json  get_appliance_sync_status.json  get_appliance_violations.json  get_appliances_summary.json  get_bw_measurement.json  get_device_template_listing.json  get_routing_instance_information.json  get_single_appliance_status.json  (+1 more)
tests/: test_mock_validation.py
(+27 files in other folders)
