[project]
name = "versa-mcp"
version = "0.1.0"
description = "Versa Networks MCP Server - Standalone"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
versa-mcp = "versa_mcp.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/versa_mcp"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
